## Process this file with automake to produce Makefile.in

# $Id: Makefile.am 557 2003-11-02 22:51:59Z twisti $

noinst_LIBRARIES = libtoolbox.a

libtoolbox_a_SOURCES = \
	memory.c \
	memory.h \
	loging.c \
	loging.h \
	chain.c \
	chain.h \
	tree.c \
	tree.h \
	list.c \
	list.h

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/jit -I$(top_srcdir)/jit/@ARCH_DIR@


## Local variables:
## mode: Makefile
## indent-tabs-mode: t
## c-basic-offset: 4
## tab-width: 8
## compile-command: "automake --add-missing"
## End:
