## Process this file with automake to produce Makefile.in

# $Id: Makefile.am 882 2004-01-14 12:37:05Z stefan $

noinst_LIBRARIES = libtoolbox.a

libtoolbox_a_SOURCES = \
	avl.c \
	avl.h \
	memory.c \
	memory.h \
	loging.c \
	loging.h \
	chain.c \
	chain.h \
	tree.c \
	tree.h \
	list.c \
	list.h

INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/jit -I$(top_srcdir)/jit/@ARCH_DIR@


## Local variables:
## mode: Makefile
## indent-tabs-mode: t
## c-basic-offset: 4
## tab-width: 8
## compile-command: "automake --add-missing"
## End:
